fix(ios): can't scroll when search results overflow with soft keyboard opened

--- a/src/main/frontend/components/command_palette.css
+++ b/src/main/frontend/components/command_palette.css
@@ -93,8 +93,22 @@
 }
 
 html.is-ios {
+  .ui__model {
+    &[label="ls-modal-search"] {
+      .panel-content {
+        padding-bottom: 0;
+        max-height: unset;
+      }
+    }
+
+    .ls-search {
+      @apply pb-0;
+    }
+  }
+
   .cp__palette-main {
     margin-bottom: 0;
+    --palettle-container-height: calc(98vh - 8rem - var(--ls-native-kb-height));
   }
 }
 
